Fixing overflow in exceptions.

--- a/app/src/sass/modules/_bolt.scss
+++ b/app/src/sass/modules/_bolt.scss
@@ -154,6 +154,7 @@ body.exception {
     }
     code {
         white-space: normal;
+        word-wrap: break-word;
     }
 }
 
